care/force-app/main/default/objects/Group__c/Group__c.object-meta.xml
<CustomObject>
    <label>Client Group</label>
    <nameField>
        <label>Client Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Client Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>