care/force-app/main/default/objects/Group__c/fields/CSR_Group_ID__c.field-meta.xml
<CustomField>
    <fullName>CSR_Group_ID__c</fullName>
    <label>CSR Group ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>