care/force-app/main/default/objects/Group__c/fields/Eligible_Individuals__c.field-meta.xml
<CustomField>
    <fullName>Eligible_Individuals__c</fullName>
    <label>Eligible Individuals</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>