care/force-app/main/default/objects/Group__c/fields/Group_Corporation_Code__c.field-meta.xml
<CustomField>
    <fullName>Group_Corporation_Code__c</fullName>
    <label>Group Corporation Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>