care/force-app/main/default/objects/Group__c/fields/LC_Billable_ID__c.field-meta.xml
<CustomField>
    <fullName>LC_Billable_ID__c</fullName>
    <label>LC Billable ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>