care/force-app/main/default/objects/Group__c/fields/Provide_Benefits_for_Employee__c.field-meta.xml
<CustomField>
    <fullName>Provide_Benefits_for_Employee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Provide Benefits for Employee</label>
    <type>Checkbox</type>
</CustomField>