care/force-app/main/default/objects/Group__c/fields/Service_Contract__c.field-meta.xml
<CustomField>
    <fullName>Service_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Contract</label>
    <referenceTo>ServiceContract</referenceTo>
    <relationshipLabel>Client Groups</relationshipLabel>
    <relationshipName>Client_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>