care/force-app/main/default/objects/Group__c/fields/Tegel_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Tegel_Account_ID__c</fullName>
    <label>Tegel Account ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>